Changelog
=========

1.5.2 - Unreleased
------------------

- Add slim scrolling to Recent Messages portlet.
  [Vitaliy Podoba]

- Update styles for Users Portlet.
  [Serhiy Valchuk]

- Activate external editor globally and for new users.
  [Jose Dinuncio]

- Fix zimbra mail not to break on emails w/o body and subject.
  [Vitaliy Podoba]

- Refresh Zimbra SOAP API call auth token when expired.
  [Vitaliy Podoba]

- Fixed TinyMCE popup styles.
  [Serhiy Valchuk]

- New view GetListOfSearchParameters added.
  [Jose Dinuncio]

- livesearch_reply_json now accepts dictionaries, becoming an advanced search.
  [Jose Dinuncio]

- GetTreeJson modified to indicate in which folders the user
  has permissions to create objects.
  [Jose Dinuncio]

- Renamed titles in "Create Task" window.
  [Jose Dinuncio]

- Implemented Control Panel for OpenERP actions.
  [Jose Dinuncio]

- Fixed VNC Zimlet related code security issues.
  [Jose Dinuncio]

1.5.1 - July 24, 2012
---------------------

- Fixed Create Content Area z-index.
  [Vitaliy Podoba]

- Add parent container titles to Add Content Area dropdown items.
  [Vitaliy Podoba]

- Updated portlet styles.
  [Serhiy Valchuk]

1.5 - July 13, 2012
-------------------

- Implemented new design.
  [Serhiy Valchuk, Vitaliy Podoba]

- First Alpha Version of Stream Viewlet implemented.
  [Vitaliy Podoba]

- Zimbra Task creation implemented.
  [Jose Dinuncio]

- Minor fixes to xmpp messaging applied.
  [Taras Melnychuk]


1.0dev (unreleased)
-------------------

- Initial release